# cpp-pcp-client

./: .gitignore  .gitmodules  .travis.yml  .travis_target.sh  CHANGELOG.md  CMakeLists.txt  LICENSE  MAINTAINERS  README.md  Rakefile  appveyor.yml
ext/: build_defaults.yaml  cpp-pcp-client.cmake  project_data.yaml
ext/debian/: changelog.erb  control  copyright  cthun-client.install  rules
ext/redhat/: cpp-pcp-client.spec.erb  cthun-client.spec.erb
lib/: CMakeLists.txt
lib/inc/cpp-pcp-client/: ws_config.hpp
lib/inc/cpp-pcp-client/connector/: client_metadata.hpp  connection.hpp  connector.hpp  connector_base.hpp  errors.hpp  session_association.hpp  timings.hpp
lib/inc/cpp-pcp-client/connector/v1/: connector.hpp  session_association.hpp
lib/inc/cpp-pcp-client/connector/v2/: connector.hpp
lib/inc/cpp-pcp-client/protocol/: chunks.hpp  errors.hpp  message.hpp  parsed_chunks.hpp  schemas.hpp  serialization.hpp
lib/inc/cpp-pcp-client/protocol/v1/: chunks.hpp  errors.hpp  message.hpp  schemas.hpp  serialization.hpp
lib/inc/cpp-pcp-client/protocol/v2/: message.hpp  schemas.hpp
lib/inc/cpp-pcp-client/util/: chrono.hpp  logging.hpp  thread.hpp
lib/inc/cpp-pcp-client/validator/: schema.hpp  validator.hpp
lib/inc/cthun-client/connector/: client_metadata.hpp  connection.hpp  connector.h  connector.hpp  timings.hpp  uuid.hpp
lib/inc/cthun-client/data_container/: data_container.h  data_container.hpp
lib/inc/cthun-client/message/: chunks.hpp  message.h  message.hpp  serialization.hpp
lib/inc/cthun-client/protocol/: chunks.hpp  errors.hpp  message.hpp  schemas.hpp  serialization.hpp
lib/inc/cthun-client/validator/: schema.hpp  validator.hpp
lib/src/connector/: client_metadata.cc  connection.cc  connector.cc  connector_base.cc  session_association.cc  timings.cc
lib/src/connector/v1/: connector.cc  session_association.cc
lib/src/connector/v2/: connector.cc
lib/src/data_container/: data_container.cc
lib/src/message/: chunks.cc  message.cc
lib/src/protocol/: chunks.cc  message.cc  parsed_chunks.cc  schemas.cc  serialization.cc
lib/src/protocol/v1/: chunks.cc  message.cc  schemas.cc  serialization.cc
lib/src/protocol/v2/: message.cc  schemas.cc
lib/src/util/: logging.cc
lib/src/validator/: schema.cc  validator.cc
lib/tests/: CMakeLists.txt  main.cc  test.hpp
lib/tests/resources/: ca_crt.pem  protected_key.pem  test_crt.pem  test_key.pem
lib/tests/resources/ssl-new/: bad_cert.csr  bad_cert.pem  bad_key.pem  ca.pem  ca.srl  ca_key.pem  crl_bad_revoked.pem  crl_empty.pem  gen.sh  good_cert.csr  good_cert.pem  good_key.pem  inventory  v3.ext
lib/tests/unit/connector/: certs.cc  certs.hpp  client_metadata_test.cc  connection_test.cc  connector_base_test.cc  connector_test.cc  connector_utils.hpp  mock_server.cc  mock_server.hpp
lib/tests/unit/connector/v1/: connector_test.cc
lib/tests/unit/connector/v2/: connector_test.cc
lib/tests/unit/data_container/: data_container_test.cc
lib/tests/unit/message/: message_test.cc  serialization_test.cc
lib/tests/unit/protocol/: message_test.cc  schemas_test.cc  serialization_test.cc
lib/tests/unit/protocol/v1/: message_test.cc  schemas_test.cc  serialization_test.cc
lib/tests/unit/protocol/v2/: message_test.cc
lib/tests/unit/validator/: schema_test.cc  validator_test.cc
locales/: cpp-pcp-client.pot
scripts/: parse_comments.py
src/: CMakeLists.txt  client.cpp  client.h  configuration.cpp  configuration.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  connection_metadata.cpp  connection_metadata.h  endpoint.cpp  endpoint.h  errors.h  macros.h  main.cpp  test_client.cpp  test_client.h
src/common/: file_utils.cpp  file_utils.h  string_utils.cpp  string_utils.h  uuid.h
src/connector/: client_metadata.cpp  client_metadata.h  connection.cpp  connection.h  connector.cpp  connector.h  errors.h  timer.h
src/cthun-client/: CMakeLists.txt
src/cthun-client/connector/: client_metadata.cc  client_metadata.cpp  connection.cc  connection.cpp  connection.h  connector.cc  connector.cpp  connector.h  errors.h  timings.cpp
src/cthun-client/data_container/: data_container.cc  data_container.cpp  data_container.h
src/cthun-client/message/: chunks.h  message.cpp  message.h
src/cthun-client/validator/: schema.cpp  schema.h  validator.cpp  validator.h
src/data_container/: data_container.cpp  data_container.h
src/log/: log.cpp  log.h
src/message/: chunks.cpp  content_parser.cpp  content_parser.h  errors.h  message.cpp  message.h  serialization.h
src/validator/: schema.cpp  schema.h  validator.cpp  validator.h
templates/: root_path.hpp
test/: CMakeLists.txt  connection_manager_certificates.h  connection_manager_test.cpp  connection_test.cpp  file_utils_test.cpp  main.cpp  test.h
test/resources/: not_a_cert
test/unit/connector/: certs.cpp  client_metadata_test.cpp  connection_test.cc
test/unit/data_container/: data_container_test.cc  data_container_test.cpp
test/unit/message/: message_test.cc  message_test.cpp  serialization_test.cc  serialization_test.cpp
test/unit/validator/: schema_test.cpp  validator_test.cc  validator_test.cpp
tutorial/: README.md
tutorial/01/agent/: main.cpp
tutorial/02/agent/: main.cpp
tutorial/03/agent/: main.cpp
tutorial/04/agent/: main.cpp
tutorial/05/agent/: main.cpp
tutorial/05/controller/: main.cpp
tutorial/06/: common.h
tutorial/06/agent/: main.cpp
tutorial/06/controller/: main.cpp
tutorial/07/: common.h
tutorial/07/agent/: main.cpp
tutorial/07/controller/: main.cpp
tutorial/08/: common.h
tutorial/08/agent/: main.cpp
tutorial/08/controller/: main.cpp
tutorial/09/: common.h
tutorial/09/agent/: main.cpp
tutorial/09/controller/: main.cpp
tutorial/10/: common.h
tutorial/10/agent/: main.cpp
tutorial/10/controller/: main.cpp
tutorial/resources/agent_certs/: crt.pem  key.pem
tutorial/resources/controller_certs/: crt.pem  key.pem
